--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "navmeshes"]
-	path = navmeshes
-	url = https://github.com/DarkstarProject/xiNavmeshes.git
+[submodule "xiNavmeshes"]
+	path = xiNavmeshes
+	url = https://github.com/DarkstarProject/xiNavmeshes
